added missing bib entries

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -7876,6 +7876,38 @@ Part 1: Flow capacities up to and including 120 g/s},
   publisher    = {American Institute of Aeronautics and Astronautics (AIAA)},
 }
 
+@Article{Chen2024a,
+  author       = {Chen, Richard J. and Ding, Tong and Lu, Ming Y. and Williamson, Drew F. K. and Jaume, Guillaume and Song, Andrew H. and Chen, Bowen and Zhang, Andrew and Shao, Daniel and Shaban, Muhammad and Williams, Mane and Oldenburg, Lukas and Weishaupt, Luca L. and Wang, Judy J. and Vaidya, Anurag and Le, Long Phi and Gerber, Georg and Sahai, Sharifa and Williams, Walt and Mahmood, Faisal},
+  date         = {2024-03},
+  journaltitle = {Nature Medicine},
+  title        = {Towards a general-purpose foundation model for computational pathology},
+  doi          = {10.1038/s41591-024-02857-3},
+  issn         = {1546-170X},
+  number       = {3},
+  pages        = {850--862},
+  volume       = {30},
+  groups       = {chapters},
+  publisher    = {Springer Science and Business Media LLC},
+}
+
+
+
+@Article{Virtanen2020a,
+  author       = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis and Haberland, Matt and Reddy, Tyler and Cournapeau, David and Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and Bright, Jonathan and Van Der Walt, Stéfan and Brett, Matthew and Wilson, Joshua and Millman, K and Mayorov, Nikolay and Nelson, Andrew and Jones, Eric and Kern, Robert and Larson, Eric and Carey, C and Polat, İlhan and Feng, Yu and Moore, Eric and Vanderplas, Jake and Laxalde, Denis and Perktold, Josef and Cimrman, Robert and Henriksen, Ian and Quintero, E and Harris, Charles and Archibald, Anne and Ribeiro, Antônio and Pedregosa, Fabian and Van Mulbregt, Paul and Vijaykumar, Aditya and Bardelli, Alessandro and Rothberg, Alex and Hilboll, Andreas and Kloeckner, Andreas and Scopatz, Anthony and Lee, Antony and Rokem, Ariel and Woods, C and Fulton, Chad and Masson, Charles and Häggström, Christian and Fitzgerald, Clark and Nicholson, David and Hagen, David and Pasechnik, Dmitrii and Olivetti, Emanuele and Martin, Eric and Wieser, Eric and Silva, Fabrice and Lenders, Felix and Wilhelm, Florian and Young, G and Price, Gavin and Ingold, Gert-Ludwig and Allen, Gregory and Lee, Gregory and Audren, Hervé and Probst, Irvin and Dietrich, Jörg and Silterra, Jacob and Webber, James and Slavič, Janko and Nothman, Joel and Buchner, Johannes and Kulick, Johannes and Schönberger, Johannes and De Miranda Cardoso, José and Reimer, Joscha and Harrington, Joseph and Rodríguez, Juan and Nunez-Iglesias, Juan and Kuczynski, Justin and Tritz, Kevin and Thoma, Martin and Newville, Matthew and Kümmerer, Matthias and Bolingbroke, Maximilian and Tartre, Michael and Pak, Mikhail and Smith, Nathaniel and Nowaczyk, Nikolai and Shebanov, Nikolay and Pavlyk, Oleksandr and Brodtkorb, Per and Lee, Perry and Mcgibbon, Robert and Feldbauer, Roman and Lewis, Sam and Tygier, Sam and Sievert, Scott and Vigna, Sebastiano and Peterson, Stefan and More, Surhud and Pudlik, Tadeusz and Oshima, Takuya and Pingel, Thomas and Robitaille, Thomas and Spura, Thomas and Jones, Thouis and Cera, Tim and Leslie, Tim and Zito, Tiziano and Krauss, Tom and Upadhyay, Utkarsh and Halchenko, Yaroslav and Vázquez-Baeza, Yoshiki},
+  date         = {2020-02-03},
+  journaltitle = {Nature Methods},
+  title        = {SciPy 1.0: fundamental algorithms for scientific computing in Python},
+  doi          = {10.1038/s41592-019-0686-2},
+  number       = {3},
+  pages        = {261-272},
+  volume       = {17},
+  day          = {3},
+  groups       = {sympy},
+  month        = {2},
+  publisher    = {Springer Science and Business Media LLC},
+  year         = {2020},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -7940,4 +7972,5 @@ Part 1: Flow capacities up to and including 120 g/s},
 3 StaticGroup:curv_Theory\;0\;1\;\;\;\;;
 3 StaticGroup:curv_applied\;0\;1\;\;\;\;;
 3 StaticGroup:physical_loads\;0\;1\;\;\;\;;
+2 StaticGroup:optimization\;0\;1\;\;\;\;;
 }
