--- a/3_Code/3_Python/1_Data/bib_rep_2023.bib
+++ b/3_Code/3_Python/1_Data/bib_rep_2023.bib
@@ -2746,19 +2746,6 @@ Now available to download in full as a PDF.},
   year         = {2024},
 }
 
-@Article{Chen2024a,
-  author       = {Chen, Richard and Ding, Tong and Lu, Ming and Williamson, Drew and Jaume, Guillaume and Song, Andrew and Chen, Bowen and Zhang, Andrew and Shao, Daniel and Shaban, Muhammad and Williams, Mane and Oldenburg, Lukas and Weishaupt, Luca and Wang, Judy and Vaidya, Anurag and Le, Long and Gerber, Georg and Sahai, Sharifa and Williams, Walt and Mahmood, Faisal},
-  date         = {2024-03},
-  journaltitle = {Nature Medicine},
-  title        = {Towards a general-purpose foundation model for computational pathology},
-  doi          = {10.1038/s41591-024-02857-3},
-  number       = {3},
-  pages        = {850-862},
-  volume       = {30},
-  groups       = {pytorch},
-  publisher    = {Springer Science and Business Media LLC},
-}
-
 @InProceedings{NEURIPS2023_4a47dd69,
   author    = {Zhang, Beichen and Zhou, Kun and Wei, Xilin and Zhao, Xin and Sha, Jing and Wang, Shijin and Wen, Ji-Rong},
   booktitle = {Advances in Neural Information Processing Systems},
@@ -3390,48 +3377,78 @@ Now available to download in full as a PDF.},
   groups       = {lisa},
 }
 
-@Misc{APUS_1,
-  author = {Unkown},
-  title  = {APUS, aircraft manufacturer},
-  note   = {https://group.apus-aero.com/wp-content/uploads/2023/10/APUS_i-2_Broschuere_20231027_Web.pdf - 27.02.2024},
-  url    = {https://group.apus-aero.com/wp-content/uploads/2023/10/APUS_i-2_Broschuere_20231027_Web.pdf},
-  groups = {webpages},
-  month  = feb,
-  year   = {2024},
+@Article{Rupcic2023,
+  author       = {Rupcic, Lea and Pierrat, Eleonore and Saavedra-Rubio, Karen and Thonemann, Nils and Ogugua, Chizoba and Laurent, Alexis},
+  date         = {2023-06},
+  journaltitle = {Transportation Research Part D: Transport and Environment},
+  title        = {Environmental impacts in the civil aviation sector: Current state and guidance},
+  doi          = {10.1016/j.trd.2023.103717},
+  issn         = {1361-9209},
+  pages        = {103717},
+  volume       = {119},
+  groups       = {general_environment},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Afonso2023,
+  author       = {Afonso, Frederico and Sohst, Martin and Diogo, Carlos M.A. and Rodrigues, Simão S. and Ferreira, Ana and Ribeiro, Inês and Marques, Ricardo and Rego, Francisco F.C. and Sohouli, Abdolrasoul and Portugal-Pereira, Joana and Policarpo, Hugo and Soares, Bruno and Ferreira, Bruna and Fernandes, Edgar C. and Lau, Fernando and Suleman, Afzal},
+  date         = {2023-02},
+  journaltitle = {Progress in Aerospace Sciences},
+  title        = {Strategies towards a more sustainable aviation: A systematic review},
+  doi          = {10.1016/j.paerosci.2022.100878},
+  issn         = {0376-0421},
+  pages        = {100878},
+  volume       = {137},
+  groups       = {general_environment},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Ansell2023,
+  author       = {Ansell, Phillip J.},
+  date         = {2023-08},
+  journaltitle = {Progress in Aerospace Sciences},
+  title        = {Review of sustainable energy carriers for aviation: Benefits, challenges, and future viability},
+  doi          = {10.1016/j.paerosci.2023.100919},
+  issn         = {0376-0421},
+  pages        = {100919},
+  volume       = {141},
+  groups       = {general_environment},
+  publisher    = {Elsevier BV},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
 0 AllEntriesGroup:;
-1 StaticGroup:hydro_Plane\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:hydrogen\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:Hydrogen_Tests\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:Hydrogen_Tests\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:hydro_Plane\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:general_environment\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:master\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:chaos\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:norms\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:swith\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:webpages\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:Report_2\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:chaos\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:structural tests\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:regression\;0\;0\;0x8a8a8aff\;\;\;;
-1 StaticGroup:llms\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:curve_Simplifcation\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:machine_learning\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:chaos\;0\;0\;0x8a8a8aff\;\;\;;
-1 StaticGroup:kmeans\;0\;0\;0x8a8a8aff\;\;\;;
-1 StaticGroup:scikit_learn\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:meshio\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:vtk\;0\;1\;0x8a8a8aff\;\;\;;
+1 StaticGroup:machine_learning\;0\;0\;0x8a8a8aff\;\;\;;
+2 StaticGroup:curve_Simplifcation\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:regression\;0\;0\;0x8a8a8aff\;\;\;;
+2 StaticGroup:llms\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:technische_mechanik\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:python\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:sympy\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:fenics\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:pytorch\;0\;1\;0x8a8a8aff\;\;\;;
-1 StaticGroup:python_tools\;0\;1\;\;\;\;;
-1 StaticGroup:optimization_algorithm\;0\;1\;\;\;\;;
+1 StaticGroup:python\;0\;0\;0x8a8a8aff\;\;\;;
+2 StaticGroup:sympy\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:fenics\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:pytorch\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:python_tools\;0\;1\;\;\;\;;
+2 StaticGroup:vtk\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:meshio\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:scikit_learn\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:kmeans\;0\;0\;0x8a8a8aff\;\;\;;
+1 StaticGroup:optimization_algorithm\;0\;0\;\;\;\;;
 2 StaticGroup:optimization_books\;0\;1\;\;\;\;;
 2 StaticGroup:mdo\;0\;1\;\;\;\;;
 2 StaticGroup:mlti_objective\;0\;1\;\;\;\;;
 1 StaticGroup:lisa\;0\;1\;0x8a8a8aff\;\;\;;
 }
+Towards a general-purpose foundation model for computational pa
