bib annotate links modifed

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -542,13 +542,6 @@
   year   = {2006},
 }
 
-@Misc{kmeans_Init_Points,
-  title  = {k-means finding set of initial points},
-  annote   = {https://theory.stanford.edu/~sergei/slides/kdd10-thclust.pdf - 30.11.2021},
-  url    = {https://theory.stanford.edu/~sergei/slides/BATS-Means.pdf},
-  groups = {master, kmeans},
-  owner  = {Sergei Vassilvitskii},
-}
 
 @Article{Lee1999,
   author    = {Lee, Daniel D and Seung, H Sebastian},
@@ -679,15 +672,6 @@ Now available to download in full as a PDF.},
   year      = {2020},
 }
 
-@Misc{2022,
-  month     = apr,
-  annote      = {https://pysindy.readthedocs.io/en/latest/examples/1\_feature\_overview.html - (2022-04-06)},
-  title     = {pySindy's remark on RK45 vs. LSODA},
-  year      = {2022},
-  groups    = {master},
-  timestamp = {2022-04-06},
-  url       = {https://pysindy.readthedocs.io/en/latest/examples/1_feature_overview.html},
-}
 
 @Book{VanRossum2009,
   author    = {Van Rossum, Guido and Drake, Fred L.},
@@ -791,15 +775,6 @@ Now available to download in full as a PDF.},
   year      = {2016},
 }
 
-@Misc{2021,
-  title     = {Wikipedia entry on chaos theory},
-  annote      = {https://en.wikipedia.org/wiki/Chaos\_theory - (29.11.2021)},
-  url       = {https://en.wikipedia.org/wiki/Chaos_theory},
-  groups    = {master, chaos},
-  month     = nov,
-  timestamp = {2021-11-29},
-  year      = {2021},
-}
 
 @Article{Chen1999,
   author    = {Chen, Guanrong and Ueta, Tetsushi},
@@ -1140,7 +1115,6 @@ Now available to download in full as a PDF.},
 @Misc{img_Bird,
   author = {BernhardJaeck},
   title  = {Image, Flying bird},
-  annote   = {https://pixabay.com/photos/crows-birds-animals-nature-7381423/ - 21.08.2022},
   url    = {https://pixabay.com/photos/crows-birds-animals-nature-7381423/},
   urldate = {2022-08-21},
   groups = {webpages},
@@ -1179,7 +1153,6 @@ Now available to download in full as a PDF.},
 @Misc{img_Transport,
   author = {Bernd Dittrich},
   title  = {Image, shall represent transportation},
-  annote   = {https://unsplash.com/photos/eCc7FjMoR74- 18.08.2022},
   url    = {https://unsplash.com/photos/eCc7FjMoR74},
   urldate = {2022-08-18},
   groups = {webpages},
@@ -2302,10 +2275,10 @@ Now available to download in full as a PDF.},
 @Misc{link_Javed_Master,
   author = {Javed Arshad Butt},
   title  = {Flow predictions using control-oriented cluster-based network modeling},
-  annote   = {https://jav-ed.github.io/master_Thesis/ - 30.03.04.2024},
   url    = {https://jav-ed.github.io/master_Thesis/},
   groups = {master, kmeans, machine_learning},
   owner  = {Javed Arshad Butt},
+  urldate = {2024-04-03},
 }
 
  
@@ -2371,10 +2344,10 @@ Now available to download in full as a PDF.},
 @Misc{link_Cluster_Meth,
   author = {scikit-learn},
   title  = {Comparing different clustering algorithms on toy datasets},
-  annote   = {https://scikit-learn.org/stable/auto_examples/cluster/plot_cluster_comparison.html - 30.03.04.2024},
   url    = {https://scikit-learn.org/stable/auto_examples/cluster/plot_cluster_comparison.html},
   groups = {master, kmeans, machine_learning},
   owner  = {scikit-learn},
+  urldate = {2024-03-30},
 }
 
 @Article{Filkovic,
@@ -2872,7 +2845,8 @@ Now available to download in full as a PDF.},
 @Article{symbeam_tool,
   author  = {António M. Couto Carneiro},
   title   = {symbeam},
-  annote    = {https://amcc1996.github.io/},
+  url    = {https://github.com/amcc1996/symbeam},
+  urldate = {2023-06-06},
   groups  = {python_tools},
   journal = {GitHub repository},
   year    = {2020},
@@ -2881,7 +2855,8 @@ Now available to download in full as a PDF.},
 @Article{interdetbeam_tool,
   author  = {Jesse Bonanno},
   title   = {IndeterminateBeam},
-  annote    = {https://github.com/JesseBonanno/IndeterminateBeam},
+  url    = {https://github.com/JesseBonanno/IndeterminateBeam},
+  urldate = {2023-06-06},
   groups  = {python_tools},
   journal = {GitHub repository},
   year    = {2020},
@@ -3277,8 +3252,8 @@ Now available to download in full as a PDF.},
   author = {HBM},
   date   = {2023},
   title  = {HBM, Structural Health Monitoring},
-  annote   = {https://www.hbm.com/en/ - 2023},
   url    = {https://www.hbm.com/en/},
+  urldate = {2023-06-06},
 }
 
 @Article{Kaeseberg2012,
@@ -3767,18 +3742,19 @@ Now available to download in full as a PDF.},
 
 @Misc{kmeans_Visual_Explanation,
   title  = {k-means++ visual explanation},
-  annote   = {https://theory.stanford.edu/~sergei/slides/BATS-Means.pdf - 02.09.2024},
   url    = {https://theory.stanford.edu/~sergei/slides/BATS-Means.pdf},
   groups = {master, kmeans},
   owner  = {Sergei Vassilvitskii},
+  urldate = {2024-09-02},
 }
 
 @Misc{link_Kmeans_Img_Proc,
   title  = {Image explaining how kmeans works},
-  annote   = {https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-unsupervised-learning - 03.04.2024},
   url    = {https://stanford.edu/~shervine/teaching/cs-229/cheatsheet-unsupervised-learning},
   groups = {master, kmeans},
   owner  = {Shervine Amidi, Stanford},
+  urldate = {2024-04-03},
+
 }
 
 @Misc{Gross2021b,
