--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -3957,7 +3957,7 @@ Now available to download in full as a PDF.},
 }
 
 @PhdThesis{butt2021development,
-  author = {Butt, Javed},
+  author = {Butt, Javed Arshad},
   title  = {Development of a module for mission analysis for a gradient-based aerodynamic shape optimization process},
   groups = {own_research},
   school = {TU Braunschweig},
@@ -7902,6 +7902,45 @@ Part 1: Flow capacities up to and including 120 g/s},
   groups    = {optimization},
 }
 
+@Article{Elham2021,
+  author       = {Elham, Ali and van Tooren, Michel J. L.},
+  date         = {2021-01},
+  journaltitle = {Structural and Multidisciplinary Optimization},
+  title        = {Discrete adjoint aerodynamic shape optimization using symbolic analysis with OpenFEMflow},
+  doi          = {10.1007/s00158-020-02799-7},
+  issn         = {1615-1488},
+  number       = {5},
+  pages        = {2531--2551},
+  volume       = {63},
+  groups       = {beam_model},
+  publisher    = {Springer Science and Business Media LLC},
+}
+
+@Misc{Valipour2021,
+  author    = {Valipour, Mojtaba and You, Bowen and Panju, Maysum and Ghodsi, Ali},
+  date      = {2021},
+  title     = {SymbolicGPT: A Generative Transformer Model for Symbolic Regression},
+  doi       = {10.48550/ARXIV.2106.14131},
+  copyright = {Creative Commons Attribution Share Alike 4.0 International},
+  groups    = {beam_model},
+  keywords  = {Machine Learning (cs.LG), Computation and Language (cs.CL), Symbolic Computation (cs.SC), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  publisher = {arXiv},
+}
+
+@Article{Kulyabov2021,
+  author       = {Kulyabov, D. S. and Korol’kova, A. V.},
+  date         = {2021-03},
+  journaltitle = {Programming and Computer Software},
+  title        = {Computer Algebra in JULIA},
+  doi          = {10.1134/s0361768821020079},
+  issn         = {1608-3261},
+  number       = {2},
+  pages        = {133--138},
+  volume       = {47},
+  groups       = {beam_model},
+  publisher    = {Pleiades Publishing Ltd},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -7967,4 +8006,5 @@ Part 1: Flow capacities up to and including 120 g/s},
 3 StaticGroup:curv_applied\;0\;1\;\;\;\;;
 3 StaticGroup:physical_loads\;0\;1\;\;\;\;;
 2 StaticGroup:optimization\;0\;1\;\;\;\;;
+3 StaticGroup:beam_model\;0\;1\;\;\;\;;
 }
