--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -7941,6 +7941,70 @@ Part 1: Flow capacities up to and including 120 g/s},
   publisher    = {Pleiades Publishing Ltd},
 }
 
+@Article{Storn1997,
+  author       = {Storn, Rainer and Price, Kenneth},
+  date         = {1997},
+  journaltitle = {Journal of Global Optimization},
+  title        = {Differential Evolution – A Simple and Efficient Heuristic for global Optimization over Continuous Spaces},
+  doi          = {10.1023/a:1008202821328},
+  issn         = {0925-5001},
+  number       = {4},
+  pages        = {341--359},
+  volume       = {11},
+  groups       = {beam_opti},
+  publisher    = {Springer Science and Business Media LLC},
+}
+
+
+@article{osti_1163659,
+title = {A Unified Differential Evolution Algorithm for Global Optimization},
+author = {Qiang, Ji and Mitchell, Chad},
+abstractNote = {Abstract?In this paper, we propose a new unified differential evolution (uDE) algorithm for single objective global optimization. Instead of selecting among multiple mutation strategies as in the conventional differential evolution algorithm, this algorithm employs a single equation as the mutation strategy. It has the virtue of mathematical simplicity and also provides users the flexbility for broader exploration of different mutation strategies. Numerical tests using twelve basic unimodal and multimodal functions show promising performance of the proposed algorithm in comparison to convential differential evolution algorithms.},
+doi = {},
+url = {https://www.osti.gov/biblio/1163659}, 
+journal = {IEEE Transactions on Evolutionary Computation.},
+place = {United States},
+year = {2014},
+month = {6},
+groups       = {beam_opti},
+}
+
+@Article{Wang2012,
+  author       = {Wang, Jianjun and Li, Li and Niu, Dongxiao and Tan, Zhongfu},
+  date         = {2012-06},
+  journaltitle = {Applied Energy},
+  title        = {An annual load forecasting model based on support vector regression with differential evolution algorithm},
+  doi          = {10.1016/j.apenergy.2012.01.010},
+  issn         = {0306-2619},
+  pages        = {65--70},
+  volume       = {94},
+  groups       = {beam_opti},
+  publisher    = {Elsevier BV},
+}
+
+@InProceedings{Wong,
+  author    = {Kit Po Wong and Zhao Yang Dong},
+  booktitle = {Proceedings of the 13th International Conference on, Intelligent Systems Application to Power Systems},
+  title     = {Differential Evolution, an Alternative Approach to Evolutionary Algorithm},
+  doi       = {10.1109/isap.2005.1599244},
+  pages     = {73--83},
+  publisher = {IEEE},
+  groups    = {beam_opti},
+}
+
+@InBook{Suganthan2012,
+  author    = {Suganthan, Ponnuthurai Nagaratnam},
+  booktitle = {Theory and Practice of Natural Computing},
+  date      = {2012},
+  title     = {Differential Evolution Algorithm: Recent Advances},
+  doi       = {10.1007/978-3-642-33860-1_4},
+  isbn      = {9783642338601},
+  pages     = {30--46},
+  publisher = {Springer Berlin Heidelberg},
+  groups    = {beam_opti},
+  issn      = {1611-3349},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -8007,4 +8071,5 @@ Part 1: Flow capacities up to and including 120 g/s},
 3 StaticGroup:physical_loads\;0\;1\;\;\;\;;
 2 StaticGroup:optimization\;0\;1\;\;\;\;;
 3 StaticGroup:beam_model\;0\;1\;\;\;\;;
+3 StaticGroup:beam_opti\;0\;1\;\;\;\;;
 }
