inital comments on 4_Beam_Opti finsihsed

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -1097,6 +1097,17 @@ Now available to download in full as a PDF.},
 }
 
 
+@misc{markmiller2024cas,
+    author = {Markmiller, Johannes},
+    title = {Composite Aerospace Structures {(CAS)}},
+    year = {2024},
+    howpublished = {Lecture Notes},
+    institution = {Technische Universit\"{a}t Dresden},
+    address = {Dresden, Germany},
+    organization = {Institute of Aerospace Engineering},
+    note = {Unpublished lecture notes},
+    groups     = {beam_opti},
+}
 
 @Article{Cebolla2019,
   author       = {R. Ortiz Cebolla and B. Acosta and P. Moretto and N. de Miguel},
@@ -8003,6 +8014,16 @@ groups       = {beam_opti},
   publisher = {Springer Berlin Heidelberg},
   groups    = {beam_opti},
   issn      = {1611-3349},
+}
+
+@Book{Altenbach2018,
+  author    = {Altenbach, Holm and Altenbach, Johannes and Kissing, Wolfgang},
+  date      = {2018},
+  title     = {Mechanics of Composite Structural Elements},
+  doi       = {10.1007/978-981-10-8935-0},
+  isbn      = {9789811089350},
+  publisher = {Springer Singapore},
+  groups    = {beam_opti},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
