glossary inshallah completed v_0

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -4394,6 +4394,15 @@ and Guidance Material for Large Rotorcraft CS-29},
   type        = {Certification Specification},
 }
 
+@Online{iso_about_page,
+  author      = {{International Organization for Standardization}},
+  institution = {International Organization for Standardization},
+  title       = {About ISO},
+  url = {https://www.iso.org/about},
+  urldate = {2024-12-11},
+  type        = {Regulation},
+  groups      = {norms, webpages},
+}
 @TechReport{iso_15869,
   author      = {{International Organization for Standardization}},
   institution = {International Organization for Standardization},
