init thanks inshallah ready - need proper corrections

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -4403,6 +4403,7 @@ and Guidance Material for Large Rotorcraft CS-29},
   type        = {Regulation},
   groups      = {norms, webpages},
 }
+
 @TechReport{iso_15869,
   author      = {{International Organization for Standardization}},
   institution = {International Organization for Standardization},
@@ -8035,6 +8036,180 @@ groups       = {beam_opti},
   groups    = {beam_opti},
 }
 
+@Article{Jones2024,
+  author       = {Jones, Craig and Mousamputri, Ichamati and Griffiths, Mark},
+  date         = {2024-10},
+  journaltitle = {Political Geography},
+  title        = {Duality and dual use in Israel’s war on Gaza},
+  doi          = {10.1016/j.polgeo.2024.103188},
+  issn         = {0962-6298},
+  pages        = {103188},
+  volume       = {114},
+  groups       = {palestine_just},
+  publisher    = {Elsevier BV},
+}
+
+
+
+@Online{link_UN_0,
+    title = {UN Commission finds war crimes and crimes against humanity in Israeli attacks on Gaza health facilities and treatment of detainees, hostages},
+    author = {United Nations (UN)},
+    url = {https://www.ohchr.org/en/press-releases/2024/10/un-commission-finds-war-crimes-and-crimes-against-humanity-israeli-attacks},
+    institution = {United Nations (UN)},
+    urldate = {2024-12-18},
+    groups       = {palestine_just},
+}
+
+@Online{link_UN_1,
+    title = {International law obligates UN, Member States and international organizations to end Israel's unlawful presence in Occupied Palestinian Territory, UN Commission says},
+    author = {United Nations (UN)},
+    url = {https://www.ohchr.org/en/press-releases/2024/10/international-law-obligates-un-member-states-and-international-organizations},
+    institution = {United Nations (UN)},
+    urldate = {2024-12-18},
+    groups       = {palestine_just},
+}
+
+@Online{link_UN_2,
+    title = {Gaza: UN committee alarmed by Israel’s blatant disregard for binding international orders},
+    author = {United Nations (UN)},
+    url = {https://www.ohchr.org/en/press-releases/2024/12/gaza-un-committee-alarmed-israels-blatant-disregard-binding-international},
+    institution = {United Nations (UN)},
+    urldate = {2024-12-18},
+    groups       = {palestine_just},
+}
+
+@Online{link_Amnesty_0,
+    title = {Amnesty International investigation concludes Israel is committing genocide against Palestinians in Gaza},
+    author = {Amnesty International},
+    url = {https://www.amnesty.org/en/latest/news/2024/12/amnesty-international-concludes-israel-is-committing-genocide-against-palestinians-in-gaza/},
+    institution = {Amnesty International},
+    urldate = {2024-12-18},
+    groups       = {palestine_just},
+}
+
+@Online{link_Amnesty_1,
+    title = {Israel/Occupied Palestinian Territory: ‘You Feel Like You Are Subhuman’: Israel’s Genocide Against Palestinians in Gaza},
+    author = {Amnesty International},
+    url = {https://www.amnesty.org/en/documents/mde15/8668/2024/en/},
+    institution = {Amnesty International},
+    urldate = {2024-12-18},
+    groups       = {palestine_just},
+}
+
+
+@article{albanese2024anatomy,
+  title={Anatomy of a Genocide. Report of the Special Rapporteur on the situation of human rights in the Palestinian territories occupied since 1967},
+  author={Albanese, F},
+  journal={Online: https://www. ohchr. org/sites/default/files/documents/hrbodies/hrcouncil/sessions-regular/session55/advance-versions/ahrc-55-73-auv. pdf},
+  year={2024},
+  groups       = {palestine_just},
+}
+
+@article {Khafaei2024,
+author = {Khafaei, Mostafa and Panahi, Yunes and Abolghasemi, Hassan and Miri, Ali and Karimi, Forouzan and Farnoosh, Gholamreza},
+title = {Injuries Caused by White Phosphorus Bombing as a Crisis in Gaza Strip},
+journal = {Trauma Monthly},
+volume = {29},
+number = {1},
+pages = {1052-1057},
+year  = {2024},
+publisher = {Official Publication of the National Center for Trauma Research},
+issn = {2251-7464}, 
+eissn = {2251-7472}, 
+doi = {10.30491/tm.2024.452290.1719},
+abstract = {White phosphorus, a chemical compound with highly flammable and smoke-generating properties, is extensively used in military weaponry. Consequently, this substance is regarded as very dangerous. The risk of harm or fatality resulting from contact with WP is heightened when it is inhaled, ingested, or absorbed by the skin. There is a correlation between this risk and the probability of mortality. This research thoroughly investigates the possible ramifications of being exposed to WP, including systemic toxicity and deep tissue burns. The text covers the process of igniting, the generation of dense smoke with a characteristic garlicky aroma, and associated subjects. Performing laboratory tests, including measuring creatinine, potassium, calcium, serum phosphorus levels, and liver enzymes and conducting blood gas analysis, is essential for accurately diagnosing phosphorus poisoning based on the patient's symptoms. Promptly extracting the individual exposed from the origin of contamination, cleansing the impacted skin or injuries with frigid water or a saline solution, and cautiously managing phosphorus particles to avert more igniting are all crucial elements of immediate post-exposure treatment. It is essential to see an ophthalmologist promptly upon detecting any indications of an eye injury and to wash the area thoroughly with water or a saline solution. Immediate medical intervention is necessary to carry out a thorough assessment and treatment. The Israel Defense Forces' use of white phosphorous in densely populated areas of Gaza throughout the war raises significant moral and humanitarian concerns. Exposure to WP poses a considerable danger to workers because of its pyrotechnic and smoke-generating properties, which may lead to systemic poisoning and significant tissue damage. This article examines the use of White Phosphorus by the Israel Defense Forces, elucidating the challenges in preventing injury and the possible consequences for innocent bystanders. The use of WP serves as evidence of the very intricate ethical dilemmas associated with the deployment of chemical weapons in modern warfare. Enhanced understanding and accountability in executing military operations are necessitated as a consequence.},
+keywords = {White phosphorus (WP),Systemic toxicity,Phosphorus poisoning,Immediate post-exposure treatment,Ethical Dilemmas},	
+url = {https://www.traumamon.com/article_193998.html},
+eprint = {https://www.traumamon.com/article_193998_fcf690635c2f1c30aa63eab5e43be0f0.pdf},
+  groups       = {palestine_just},
+}
+
+		
+
+
+@Article{Kunichoff2024,
+  author       = {Kunichoff, Dennis and Mills, David and Asi, Yara and Abdulrahim, Sawsan and Wispelwey, Bram and Tanous, Osama and Ahmed, A. Kayum and Hammoudeh, Weeam and Bahour, Nadine and Bassett, Mary T. and Greenough, P. Gregg},
+  date         = {2024-10},
+  journaltitle = {PLOS Global Public Health},
+  title        = {Are hospitals collateral damage? Assessing geospatial proximity of 2000 lb bomb detonations to hospital facilities in the Gaza Strip from October 7 to November 17, 2023},
+  doi          = {10.1371/journal.pgph.0003178},
+  editor       = {Mowafi, Hani},
+  issn         = {2767-3375},
+  number       = {10},
+  pages        = {e0003178},
+  volume       = {4},
+  groups       = {palestine_just},
+  publisher    = {Public Library of Science (PLoS)},
+}
+
+@Article{El_Shewy2024,
+  author       = {El‐Shewy, Mohamed and Griffiths, Mark and Jones, Craig},
+  date         = {2024-09},
+  journaltitle = {Antipode},
+  title        = {Israel’s War on Gaza in a Global Frame},
+  doi          = {10.1111/anti.13094},
+  issn         = {1467-8330},
+  groups       = {palestine_just},
+  publisher    = {Wiley},
+}
+
+@Article{Brooks2024,
+  author       = {Brooks, Andrew and Griffiths, Mark},
+  date         = {2024-10},
+  journaltitle = {Political Geography},
+  title        = {Beyond Apartheid Israel},
+  doi          = {10.1016/j.polgeo.2024.103193},
+  issn         = {0962-6298},
+  pages        = {103193},
+  volume       = {114},
+  groups       = {palestine_just},
+  publisher    = {Elsevier BV},
+}
+
+@Article{Ram2024,
+  author       = {Ram, Moriel and Handel, Ariel},
+  date         = {2024-10},
+  journaltitle = {Political Geography},
+  title        = {Violent dwelling: Settler colonialism and domicide},
+  doi          = {10.1016/j.polgeo.2024.103179},
+  issn         = {0962-6298},
+  pages        = {103179},
+  volume       = {114},
+  groups       = {palestine_just},
+  publisher    = {Elsevier BV},
+}
+
+@Article{neier2024israel,
+  author  = {Neier, Aryeh},
+  title   = {Is Israel Committing Genocide?},
+  groups  = {palestine_just},
+  journal = {The New York Review of Books [June 6, 2024]. https://www. nybooks. com/articles/2024/06/06/is-israel-committing-genocide-aryeh-neier},
+  year    = {2024},
+}
+
+@Article{Segal2024,
+  author       = {Segal, Raz},
+  date         = {2024-04},
+  journaltitle = {Journal of Palestine Studies},
+  title        = {Settler Antisemitism, Israeli Mass Violence, and the Crisis of Holocaust and Genocide Studies},
+  doi          = {10.1080/0377919x.2024.2384385},
+  issn         = {1533-8614},
+  number       = {2},
+  pages        = {50--73},
+  volume       = {53},
+  groups       = {palestine_just},
+  publisher    = {Informa UK Limited},
+}
+
+@Article{Abuawad2024,
+  author    = {Abuawad, Ahlam and Griffiths, Mark and Edwards, Graham and Eftekhari, Adan and El-Ebweini, Mohammed and Al-Najar, Husam and Butmeh, Abeer and Abu Dayyeh, Rasha and Al-Shewy, Mohamed and Aker, Amira},
+  date      = {2024},
+  title     = {From Ecocide to Genocide: A Call to Action for Scientists Globally to Address the Destruction in Gaza},
+  doi       = {10.2139/ssrn.5021472},
+  groups    = {palestine_just},
+  publisher = {Elsevier BV},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -8095,11 +8270,12 @@ groups       = {beam_opti},
 3 StaticGroup:mobility\;0\;1\;0x7c7c7cff\;\;\;;
 2 StaticGroup:hydrogen_section\;0\;0\;\;\;\;;
 3 StaticGroup:h_safety\;0\;0\;\;\;\;;
-2 StaticGroup:loads\;0\;1\;\;\;\;;
+2 StaticGroup:loads\;0\;0\;\;\;\;;
 3 StaticGroup:curv_Theory\;0\;1\;\;\;\;;
 3 StaticGroup:curv_applied\;0\;1\;\;\;\;;
 3 StaticGroup:physical_loads\;0\;1\;\;\;\;;
 2 StaticGroup:optimization\;0\;1\;\;\;\;;
 3 StaticGroup:beam_model\;0\;1\;\;\;\;;
 3 StaticGroup:beam_opti\;0\;1\;\;\;\;;
+2 StaticGroup:palestine_just\;0\;1\;\;\;\;;
 }
