init thanks inshallah ready - need proper corrections v_1

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -8078,6 +8078,15 @@ groups       = {beam_opti},
     groups       = {palestine_just},
 }
 
+@Online{link_UN_3,
+    title = {Six-month update report on the human rights situation in Gaza: 1 November 2023 to 30 April 2024 – OHCHR},
+    author = {United Nations (UN)},
+    url = {https://www.un.org/unispal/document/update-report-08nov24/},
+    institution = {United Nations (UN)},
+    urldate = {2024-12-18},
+    groups       = {palestine_just},
+}
+
 @Online{link_Amnesty_0,
     title = {Amnesty International investigation concludes Israel is committing genocide against Palestinians in Gaza},
     author = {Amnesty International},
