init thanks inshallah ready - need proper corrections v_2

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -8106,6 +8106,16 @@ groups       = {beam_opti},
 }
 
 
+@Online{link_ICC_0,
+    title = {Situation in the State of Palestine: ICC Pre-Trial Chamber I rejects the State of Israel’s challenges to jurisdiction and issues warrants of arrest for Benjamin Netanyahu and Yoav Gallant},
+    author = {International Criminal Court (ICC) },
+    url = {https://www.icc-cpi.int/news/situation-state-palestine-icc-pre-trial-chamber-i-rejects-state-israels-challenges},
+    institution = {International Criminal Court (ICC) },
+    urldate = {2024-12-18},
+    groups       = {palestine_just},
+}
+
+
 @article{albanese2024anatomy,
   title={Anatomy of a Genocide. Report of the Special Rapporteur on the situation of human rights in the Palestinian territories occupied since 1967},
   author={Albanese, F},
