--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -8107,12 +8107,12 @@ groups       = {beam_opti},
 
 
 @Online{link_ICC_0,
-    title = {Situation in the State of Palestine: ICC Pre-Trial Chamber I rejects the State of Israel’s challenges to jurisdiction and issues warrants of arrest for Benjamin Netanyahu and Yoav Gallant},
-    author = {International Criminal Court (ICC) },
-    url = {https://www.icc-cpi.int/news/situation-state-palestine-icc-pre-trial-chamber-i-rejects-state-israels-challenges},
-    institution = {International Criminal Court (ICC) },
-    urldate = {2024-12-18},
-    groups       = {palestine_just},
+  author      = {International Criminal Court (ICC)},
+  title       = {Situation in the State of Palestine: ICC Pre-Trial Chamber I rejects the State of Israel’s challenges to jurisdiction and issues warrants of arrest for Benjamin Netanyahu and Yoav Gallant},
+  url         = {https://www.icc-cpi.int/news/situation-state-palestine-icc-pre-trial-chamber-i-rejects-state-israels-challenges},
+  urldate     = {2024-12-18},
+  groups      = {palestine_just},
+  institution = {International Criminal Court (ICC)},
 }
 
 
@@ -8229,6 +8229,16 @@ eprint = {https://www.traumamon.com/article_193998_fcf690635c2f1c30aa63eab5e43be
   publisher = {Elsevier BV},
 }
 
+@Book{Barbero2023,
+  author    = {Barbero, Ever J.},
+  date      = {2023-04},
+  title     = {Finite Element Analysis of Composite Materials using Abaqus®},
+  doi       = {10.1201/9781003108153},
+  isbn      = {9781003108153},
+  publisher = {CRC Press},
+  groups    = {structural tests},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -8287,7 +8297,7 @@ eprint = {https://www.traumamon.com/article_193998_fcf690635c2f1c30aa63eab5e43be
 4 StaticGroup:airacft_subsection\;0\;1\;0x707070ff\;\;\;;
 4 StaticGroup:pressure_vessel_Section\;0\;0\;\;\;\;;
 3 StaticGroup:mobility\;0\;1\;0x7c7c7cff\;\;\;;
-2 StaticGroup:hydrogen_section\;0\;0\;\;\;\;;
+2 StaticGroup:hydrogen_section\;0\;1\;\;\;\;;
 3 StaticGroup:h_safety\;0\;0\;\;\;\;;
 2 StaticGroup:loads\;0\;0\;\;\;\;;
 3 StaticGroup:curv_Theory\;0\;1\;\;\;\;;
