--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -435,6 +435,17 @@
     urldate = {2024-10-24},
 }
 
+@Online{link_Fipps,
+  author      = {TUD Dresden University of Technology, Chair of Aircraft Engineering},
+  title       = {Finite Element solver FiPPS²},
+  url         = {https://github.com/TUD-LFT/FiPPS2},
+  urldate     = {2024-10-24},
+  institution = {TUD Dresden University of Technology, Chair of Aircraft Engineering},
+  type        = {software},
+  year        = {2024},
+}
+
+  
 @Online{link_deepspeed2024,
   title = {DeepSpeed: A Deep Learning Optimization Library},
   author = {{Microsoft Research}},
@@ -8239,6 +8250,20 @@ eprint = {https://www.traumamon.com/article_193998_fcf690635c2f1c30aa63eab5e43be
   groups    = {structural tests},
 }
 
+@Article{Geuzaine2009,
+  author       = {Geuzaine, Christophe and Remacle, Jean‐François},
+  date         = {2009-05},
+  journaltitle = {International Journal for Numerical Methods in Engineering},
+  title        = {Gmsh: A 3‐D finite element mesh generator with built‐in pre‐ and post‐processing facilities},
+  doi          = {10.1002/nme.2579},
+  issn         = {1097-0207},
+  number       = {11},
+  pages        = {1309--1331},
+  volume       = {79},
+  groups       = {optimization},
+  publisher    = {Wiley},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
@@ -8299,7 +8324,7 @@ eprint = {https://www.traumamon.com/article_193998_fcf690635c2f1c30aa63eab5e43be
 3 StaticGroup:mobility\;0\;1\;0x7c7c7cff\;\;\;;
 2 StaticGroup:hydrogen_section\;0\;1\;\;\;\;;
 3 StaticGroup:h_safety\;0\;0\;\;\;\;;
-2 StaticGroup:loads\;0\;0\;\;\;\;;
+2 StaticGroup:loads\;0\;1\;\;\;\;;
 3 StaticGroup:curv_Theory\;0\;1\;\;\;\;;
 3 StaticGroup:curv_applied\;0\;1\;\;\;\;;
 3 StaticGroup:physical_loads\;0\;1\;\;\;\;;
