inital proofreading of 0_Res_Init

--- a/1_Data/1_Bib/bib.bib
+++ b/1_Data/1_Bib/bib.bib
@@ -8264,6 +8264,16 @@ eprint = {https://www.traumamon.com/article_193998_fcf690635c2f1c30aa63eab5e43be
   publisher    = {Wiley},
 }
 
+@Misc{RalfGommers2024,
+  author    = {Ralf Gommers, and Pauli Virtanen, and Matt Haberland, and Evgeni Burovski, and Warren Weckesser, and Tyler Reddy, and Travis E. Oliphant, and David Cournapeau, and Andrew Nelson, and alexbrc, and Pamphile Roy, and Pearu Peterson, and Ilhan Polat, and Josh Wilson, and endolith, and Nikolay Mayorov, and Stefan van der Walt, and Matthew Brett, and Denis Laxalde, and Eric Larson, and Atsushi Sakai, and Jarrod Millman, and Lars, and peterbell10, and CJ Carey, and Paul van Mulbregt, and Lucas Colley, and Jake Bowhay, and eric-jones, and Kai Striega,},
+  date      = {2024},
+  title     = {scipy/scipy: SciPy 1.14.0rc2},
+  doi       = {10.5281/ZENODO.11702230},
+  copyright = {Creative Commons Attribution 4.0 International},
+  groups    = {python},
+  publisher = {Zenodo},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
